--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@
         <%= f.label :body, "New comment" %><br/>
         <%= f.text_area :body %>
     </p>
-    <p><%= f.submit "Add comment" %></p>
+    <p><%= f.submit "Add Comment" %></p>
 <% end %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
